# kyuubi-k8s-operator

./: .env  .gitignore  LICENSE  README.md  actions.yaml  charmcraft.yaml  config.yaml  metadata.yaml  newkey.pub  private_key.pem  pyproject.toml  refresh_versions.toml  requirements.txt  tox.ini
.github/: ci_gpu.yaml
.github/workflows/: ci.yaml  ci_gpu.yaml  release.yaml  sync_issue_to_jira.yaml  tiobe_scan.yaml
docs/: index.md  landing.md  overview.md
docs/how-to/: h-enable-encryption.md  h-external-access.md  h-external-metastore.md  h-integrate-application.md  h-manage-password.md  h-upgrade.md
docs/tutorial/: index.md
lib/charms/data_platform_libs/v0/: data_interfaces.py
lib/charms/spark_integration_hub_k8s/v0/: spark_service_account.py
lib/charms/zookeeper/v0/: client.py
src/: authentication.py  charm.py  config.py  constants.py  database.py  k8s_utils.py  models.py  providers.py  relation.py  s3.py  setup.sql  utils.py  workload.py
src/common/: __init__.py
src/common/relation/: __init__.py  domain.py  spark_sa.py
src/common/workload/: __init__.py  k8s.py
src/config/: __init__.py  hive.py  kyuubi.py  spark.py
src/core/: config.py  context.py  domain.py  enums.py
src/core/workload/: __init__.py  kyuubi.py
src/events/: __init__.py  actions.py  auth.py  base.py  integration_hub.py  kyuubi.py  metastore.py  provider.py  refresh.py  s3.py  tls.py  upgrade.py  zookeeper.py
src/grafana_dashboards/: dashboard.json
src/managers/: __init__.py  auth.py  database.py  hive_metastore.py  k8s.py  kyuubi.py  s3.py  service.py  tls.py
src/prometheus_alert_rules/: prometheus.yaml
src/utils/: __init__.py  auth.py  io.py  k8s.py  logging.py  service.py
src/workload/: __init__.py  base.py  k8s.py  kyuubi.py
tests/integration/: conftest.py  helpers.py  test_auth.py  test_charm.py  test_dynamic_allocation.py  test_external_access.py  test_ha.py  test_iceberg.py  test_jdbc_endpoint.sh  test_metastore.py  test_observability.py  test_provider.py  test_relation.py  test_tls.py  test_trust.py  test_upgrade.py  types.py
tests/integration/app-charm/: charmcraft.yaml
tests/integration/app-charm/lib/charms/data_platform_libs/v0/: data_interfaces.py
tests/integration/app-charm/lib/charms/spark_integration_hub_k8s/v0/: spark_service_account.py
tests/integration/app-charm/src/: charm.py
tests/integration/inplace_upgrades/: conftest.py  test_inplace_upgrades.py
tests/integration/refresh/: conftest.py  test_refresh.py
tests/integration/setup/: config-microk8s-gpu.sh  fetch_s3_credentials.sh  setup-enviroment.sh  setup_service_account.sh  test.sql  testpod_spec.yaml  testpod_spec.yaml.template
tests/unit/: conftest.py  helpers.py  test_actions.py  test_auth.py  test_charm.py  test_components_refresh.py  test_config.py  test_provider.py  test_tls.py
